test/langtools/tools/javac/valhalla/value-objects/SemanticsViolationsTest.out
SemanticsViolationsTest.java:16:20: compiler.err.illegal.combination.of.modifiers: abstract, value
SemanticsViolationsTest.java:17:11: compiler.err.illegal.combination.of.modifiers: interface, value
SemanticsViolationsTest.java:12:28: compiler.err.cant.inherit.from.final: SemanticsViolationsTest.Base
SemanticsViolationsTest.java:65:27: compiler.err.mod.not.allowed.here: synchronized
SemanticsViolationsTest.java:90:27: compiler.err.mod.not.allowed.here: synchronized
SemanticsViolationsTest.java:12:5: compiler.err.identity.class.must.not.implement.value.object: SemanticsViolationsTest.Subclass
SemanticsViolationsTest.java:29:17: compiler.err.cant.assign.val.to.final.var: x
SemanticsViolationsTest.java:34:17: compiler.err.cant.assign.val.to.final.var: y
SemanticsViolationsTest.java:40:11: compiler.err.value.class.must.not.implement.identity.object: SemanticsViolationsTest.IdentityValue
SemanticsViolationsTest.java:42:11: compiler.err.concrete.supertype.for.value.class: SemanticsViolationsTest.IdentityValue2, SemanticsViolationsTest
SemanticsViolationsTest.java:47:11: compiler.err.super.field.not.allowed: xx, SemanticsViolationsTest.BrokenValue3, SemanticsViolationsTest.AbstractWithState
SemanticsViolationsTest.java:59:13: compiler.err.call.to.super.not.allowed.in.value.ctor
SemanticsViolationsTest.java:67:11: compiler.err.type.found.req: SemanticsViolationsTest.BrokenValue5, (compiler.misc.type.req.identity)
SemanticsViolationsTest.java:72:21: compiler.err.value.class.may.not.override: finalize
SemanticsViolationsTest.java:32:9: compiler.err.var.might.not.have.been.initialized: z
SemanticsViolationsTest.java:81:17: compiler.err.this.exposed.prematurely
SemanticsViolationsTest.java:81:16: compiler.err.this.exposed.prematurely
17 errors
